--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "test": "jest --watchAll",
     "lint": "expo lint"
@@ -20,6 +20,7 @@
     "@react-navigation/native": "^7.0.0",
     "expo": "~52.0.7",
     "expo-blur": "~14.0.1",
+    "expo-calendar": "~14.0.2",
     "expo-constants": "~17.0.3",
     "expo-font": "~13.0.1",
     "expo-haptics": "~14.0.0",
@@ -34,11 +35,13 @@
     "react-dom": "18.3.1",
     "react-native": "0.76.2",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-permissions": "^5.1.0",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.1.0",
+    "react-native-screens": "^4.0.0",
     "react-native-web": "~0.19.13",
-    "react-native-webview": "13.12.2"
+    "react-native-webview": "13.12.2",
+    "expo-dev-client": "~5.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -50,5 +53,6 @@
     "react-test-renderer": "18.3.1",
     "typescript": "^5.3.3"
   },
+  "packageManager": "npm",
   "private": true
 }
